Added two new attibutes to Person to try out the needed refactoring work, refactored Entity class unit tests to contain validations of error messages, too - not just number of errors
